# caris-experiment

./: .gitignore  category_to_product_data.md  pending-fabrics.md  run-product-scraper.js  test.py
backend/: package-lock.json  package.json  server.js
caris-scraper-python/: .gitignore  README.md  cli.py  invoice-mapping-recipe.md  invoice01.json  parallel_scraper.py  product_browser.html  products.json  pyproject.toml  result.json  result3.json  update_browser.py
caris-scraper-python/src/: __init__.py  claude_parser.py  scraper.py  scraper_with_ai.py  types.py
categories/: caris-scraper.js  consolidate-products.js  consolidated-products.json  create-categories-and-update-products.js  package-lock.json  package.json  productsraw.json
categories/output/: Bar Stool_products.json  Couch_products.json  INTERIOR_products.json  Metal Chair_products.json  OUTDOOR_products.json  Office Chairs_products.json  Sofa_products.json  Wingback Chair_products.json  Wooden Chair_products.json
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/specs/: analytics.md
frontend/src/: App.vue  main.js
frontend/src/components/: AppNavbar.vue  FabricModal.vue  FabricPicker.vue  OrderAnalytics.vue  OrderCard.vue  OrderExportModal.vue  OrderItemForm.vue  ProductCard.vue  ProductModal.vue  QuickAddForm.vue
frontend/src/data/: categories.json  fabrics.json  invoice01.json  product_settings.json  products.json
frontend/src/router/: index.js
frontend/src/stores/: analytics.js  fabrics.js  orders.js  products.js
specs/: frontend.md
(+5 files in other folders)
